// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render header with one button 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
  </span>
  <div
    className="actions"
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`Header should render header with one button and indicate the component is required 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
    *
  </span>
  <div
    className="actions"
  >
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-plus"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`Header should render header with one dropdown and two items 1`] = `
<header
  className="theme-tc-enumeration-header tc-enumeration-header"
>
  <span>
    Values
  </span>
  <div
    className="actions"
  >
    <div
      className="dropdown btn-group btn-group-link"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        btooltipPlacement="bottom"
        className="theme-tc-dropdown-button tc-dropdown-button dropdown-toggle btn btn-link"
        disabled={false}
        id={undefined}
        inProgress={undefined}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="button"
        type="button"
      >
        <span
          className="tc-dropdown-button-title"
        >
          <svg
            aria-hidden="true"
            className="theme-tc-svg-icon tc-svg-icon"
            focusable="false"
            title={null}
          >
            <use
              xlinkHref="#talend-plus"
            />
          </svg>
        </span>
      </button>
      <ul
        aria-labelledby={undefined}
        className="dropdown-menu dropdown-menu-right"
        role="menu"
      >
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="append-uploding"
            label="Add values from a file"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Add values from a file
          </a>
        </li>
        <li
          className=""
          role="presentation"
          style={undefined}
        >
          <a
            href="#"
            id="append-uploding"
            label="Overwrite existing values"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex="-1"
          >
            Overwrite existing values
          </a>
        </li>
      </ul>
    </div>
  </div>
</header>
`;
